force-app/main/default/objects/Legend_Settings__c/Legend_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Legend Settings</label>
</CustomObject>