force-app/main/default/objects/Legend_Settings__c/fields/Barrie_Pickup_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Barrie_Pickup_Calendar_Id__c</fullName>
    <defaultValue>&quot;023i00000045vbt&quot;</defaultValue>
    <label>Barrie Pickup Calendar Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>