force-app/main/default/objects/Legend_Settings__c/fields/Budgeted_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Exchange_Rate__c</fullName>
    <description>Field to use for formulas that require exchange rates for calcuations</description>
    <label>Budgeted US Exchange Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>