force-app/main/default/objects/Legend_Settings__c/fields/Current_Program_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Year__c</fullName>
    <label>Current Program Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>