force-app/main/default/objects/Legend_Settings__c/fields/Default_Retail_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Default_Retail_Pricebook__c</fullName>
    <label>Default Retail Pricebook</label>
    <length>18</length>
    <type>Text</type>
</CustomField>