force-app/main/default/objects/Legend_Settings__c/fields/Dev_Retail_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Dev_Retail_Pricebook__c</fullName>
    <description>This is the retail Pricebook ID to develop against, for example could be a new pricebook with ne products that have not launched yet</description>
    <externalId>true</externalId>
    <label>Dev Retail Pricebook</label>
    <length>18</length>
    <type>Text</type>
</CustomField>