force-app/main/default/objects/Legend_Settings__c/fields/Email_Logo_Id_English__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_Id_English__c</fullName>
    <label>Email Logo Id English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>