force-app/main/default/objects/Legend_Settings__c/fields/Email_Logo_Id_French__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_Id_French__c</fullName>
    <label>Email Logo Id French</label>
    <length>255</length>
    <type>Text</type>
</CustomField>