force-app/main/default/objects/Legend_Settings__c/fields/FederalTaxRate__c.field-meta.xml
<CustomField>
    <fullName>FederalTaxRate__c</fullName>
    <label>FederalTaxRate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>