force-app/main/default/objects/Legend_Settings__c/fields/Invoice_temp_disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_temp_disclaimer__c</fullName>
    <description>Temporary disclaimer displayed in Legend Invoice</description>
    <label>Invoice temp disclaimer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>