force-app/main/default/objects/Legend_Settings__c/fields/Invoice_temp_disclaimer_french__c.field-meta.xml
<CustomField>
    <fullName>Invoice_temp_disclaimer_french__c</fullName>
    <label>Invoice temp disclaimer french</label>
    <type>TextArea</type>
</CustomField>