force-app/main/default/objects/Legend_Settings__c/fields/LegendBarrieAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegendBarrieAccountId__c</fullName>
    <description>The Account Id for the Legend Boats Barrie Account</description>
    <label>Legend Barrie Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>