force-app/main/default/objects/Legend_Settings__c/fields/LegendMontrealAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegendMontrealAccountId__c</fullName>
    <description>Account Id for Legend Boats Montreal Account</description>
    <label>Legend Montreal Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>