force-app/main/default/objects/Legend_Settings__c/fields/LegendWhitefishAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegendWhitefishAccountId__c</fullName>
    <description>The Account Id of the Legend Boats Whitefish Account</description>
    <label>Legend Whitefish Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>