force-app/main/default/objects/Legend_Settings__c/fields/LegendWholesaleAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegendWholesaleAccountId__c</fullName>
    <label>Legend Wholesale AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>