force-app/main/default/objects/Legend_Settings__c/fields/Mercury_Motor_Request_Serial_Number_Emai__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Motor_Request_Serial_Number_Emai__c</fullName>
    <description>The email sent to Mercury to specify the serial number of the Boat when a Partner orders a Motor on a special Legend promotion</description>
    <label>Mercury Motor Request Serial Number Emai</label>
    <length>18</length>
    <type>Text</type>
</CustomField>