force-app/main/default/objects/Legend_Settings__c/fields/PAC_Percent__c.field-meta.xml
<CustomField>
    <fullName>PAC_Percent__c</fullName>
    <label>PAC Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>