force-app/main/default/objects/Legend_Settings__c/fields/Partner_Delivery_Notice_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Delivery_Notice_Template_Id__c</fullName>
    <description>The template used to send a notification to Partner of Boats/trailers that will be arriving soon</description>
    <label>Partner Delivery Notice Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>