force-app/main/default/objects/Legend_Settings__c/fields/Product_Family_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Filter__c</fullName>
    <label>Product Family Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>