force-app/main/default/objects/Legend_Settings__c/fields/Product_Internal_Labour__c.field-meta.xml
<CustomField>
    <fullName>Product_Internal_Labour__c</fullName>
    <label>Product Internal Labour</label>
    <length>18</length>
    <type>Text</type>
</CustomField>