force-app/main/default/objects/Legend_Settings__c/fields/Purchase_Order_Line_Lot__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Lot__c</fullName>
    <label>Purchase Order Line Lot</label>
    <length>4</length>
    <type>Text</type>
</CustomField>