force-app/main/default/objects/Legend_Settings__c/fields/Smokercraft_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Smokercraft_Account_Id__c</fullName>
    <description>Account Id for Smokercraft. This is used to determine if we post to SmokerApi when submitting warranty or not</description>
    <label>Smokercraft Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>