force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_InsertPriceBookTrigger__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_InsertPriceBookTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger InsertPriceBookTrigger</description>
    <label>TriggerEnable_InsertPriceBookTrigger</label>
    <type>Checkbox</type>
</CustomField>