force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_OpportunityLineItem_Before__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_OpportunityLineItem_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger OpportunityLineItem_Before</description>
    <label>TriggerEnable_OpportunityLineItem_Before</label>
    <type>Checkbox</type>
</CustomField>