force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_OpportunityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger OpportunityTrigger</description>
    <label>TriggerEnable_OpportunityTrigger</label>
    <type>Checkbox</type>
</CustomField>