force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_Product_Before__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_Product_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger Product_Before</description>
    <label>TriggerEnable_Product_Before</label>
    <type>Checkbox</type>
</CustomField>