force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_productDeleteTrigger__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_productDeleteTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger productDeleteTrigger</description>
    <label>TriggerEnable_productDeleteTrigger</label>
    <type>Checkbox</type>
</CustomField>