force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_Quote_AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_Quote_AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger Quote_AfterInsert</description>
    <label>TriggerEnable_Quote_AfterInsert</label>
    <type>Checkbox</type>
</CustomField>