force-app/main/default/objects/Legend_Settings__c/fields/TriggerEnable_QuoteLineItem_BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnable_QuoteLineItem_BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the trigger QuoteLineItem_BeforeUpdate</description>
    <label>TriggerEnable_QuoteLineItem_BeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>