force-app/main/default/objects/Legend_Settings__c/fields/Warranty_Recoverable_Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Recoverable_Email_Template_Id__c</fullName>
    <externalId>true</externalId>
    <label>Warranty Recoverable Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>