force-app/main/default/objects/Legend_Settings__c/fields/WarrantyLabourProduct__c.field-meta.xml
<CustomField>
    <fullName>WarrantyLabourProduct__c</fullName>
    <externalId>true</externalId>
    <label>WarrantyLabourProduct</label>
    <length>18</length>
    <type>Text</type>
</CustomField>