force-app/main/default/objects/Legend_Settings__c/fields/Whitefish_Pickup_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Whitefish_Pickup_Calendar_Id__c</fullName>
    <defaultValue>&quot;023i00000045vc3&quot;</defaultValue>
    <label>Whitefish Pickup Calendar Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>